--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,6 @@ deploy_production:
     - yarn start > /dev/null 2>&1 &
     - 'curl -X POST "https://api.cloudflare.com/client/v4/zones/a2df40bc458243b60608a5ebbb5f36f2/purge_cache" -H "Authorization: Bearer $CF_CACHE_TOKEN"  -H "Content-Type:application/json" --data "{\"purge_everything\":true}"'
   tags:
-    - nextverse-prod-only
+    - befit-prod-only
   only:
     - master
