--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formidable": "^2.0.1",
     "googleapis": "^100.0.0",
     "next": "12.1.6",
+    "nextjs-progressbar": "^0.0.14",
     "notistack": "^2.0.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -23,6 +24,7 @@
     "swiper": "^8.1.4"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.10",
     "@types/node": "17.0.31",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
