--- a/package.json
+++ b/package.json
@@ -19,15 +19,19 @@
     "notistack": "^2.0.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-responsive": "^9.0.0-beta.8",
     "react-toastify": "^9.0.1",
     "swiper": "^8.1.4"
   },
   "devDependencies": {
+    "@types/formidable": "^2.0.5",
     "@types/gtag.js": "^0.0.10",
     "@types/node": "17.0.31",
+    "@types/node-fetch": "^2.6.1",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
+    "@types/react-google-recaptcha": "^2.1.5",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.6",
     "sass": "^1.51.0",
