--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.1",
+    "echarts-for-react": "^3.0.2",
     "formidable": "^2.0.1",
     "googleapis": "^100.0.0",
     "next": "12.1.6",
