--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@metamask/detect-provider": "^1.2.0",
+    "@metamask/providers": "^9.0.0",
     "@mui/material": "^5.8.1",
-		"axios": "0.27.2",
+    "axios": "^0.27.2",
     "echarts": "^5.3.2",
     "echarts-for-react": "^3.0.2",
+    "ethers": "^5.6.8",
     "formidable": "^2.0.1",
     "googleapis": "^100.0.0",
     "next": "12.1.6",
