--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fullpage/react-fullpage": "^0.1.26",
     "@metamask/detect-provider": "^1.2.0",
     "@metamask/providers": "^9.0.0",
     "@mui/material": "^5.8.1",
