--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@metamask/detect-provider": "^1.2.0",
     "@metamask/providers": "^9.0.0",
     "@mui/material": "^5.8.1",
+    "@mui/styles": "^5.8.7",
     "axios": "^0.27.2",
     "echarts": "^5.3.2",
     "echarts-for-react": "^3.0.2",
@@ -32,6 +33,7 @@
     "swiper": "^8.1.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.1",
     "@types/formidable": "^2.0.5",
     "@types/gtag.js": "^0.0.10",
     "@types/node": "17.0.31",
