--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@metamask/providers": "^9.0.0",
     "@mui/material": "^5.8.1",
     "@mui/styles": "^5.8.7",
+    "@mui/system": "^5.8.7",
     "axios": "^0.27.2",
     "echarts": "^5.3.2",
     "echarts-for-react": "^3.0.2",
