--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.8.1",
     "@mui/styles": "^5.8.7",
     "@mui/system": "^5.8.7",
+    "aos": "^2.3.4",
     "axios": "^0.27.2",
     "echarts": "^5.3.2",
     "echarts-for-react": "^3.0.2",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.2.1",
+    "@types/aos": "^3.0.4",
     "@types/formidable": "^2.0.5",
     "@types/gtag.js": "^0.0.10",
     "@types/node": "17.0.31",
