--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.1.0",
     "react-google-recaptcha": "^2.1.0",
     "react-responsive": "^9.0.0-beta.8",
+    "react-scroll-parallax": "^3.2.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.1",
     "slick-carousel": "^1.8.1",
