--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.27.2",
     "echarts": "^5.3.2",
     "echarts-for-react": "^3.0.2",
+    "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.6.8",
     "formidable": "^2.0.1",
     "googleapis": "^100.0.0",
