--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ethers": "^5.6.8",
     "formidable": "^2.0.1",
     "googleapis": "^100.0.0",
+    "moment": "^2.29.4",
     "next": "12.1.6",
     "nextjs-progressbar": "^0.0.14",
     "notistack": "^2.0.4",
