--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,11 +8,13 @@ deploy_production:
     # - yarn remove eslint && yarn add --dev eslint@"<8.0.0"
     - yarn install
     - yarn build
-    - kill -9 $(ps -ef | grep -i 'next start' | grep -v grep | awk '{print $2}') || true
-    - kill -9 $(ps -ef | grep -i 'yarn start' | grep -v grep | awk '{print $2}') || true
-    - yarn start > /dev/null 2>&1 &
-    - 'curl -X POST "https://api.cloudflare.com/client/v4/zones/a2df40bc458243b60608a5ebbb5f36f2/purge_cache" -H "Authorization: Bearer $CF_CACHE_TOKEN"  -H "Content-Type:application/json" --data "{\"purge_everything\":true}"'
+    - ssh "$PRD_HOST" './killall-website-process.sh || true'
+    - ssh "$PRD_HOST" 'rm -rf ~/befitter-homepage || true'
+    - ssh "$PRD_HOST" 'mkdir -p ~/befitter-homepage/.next || true'
+    - scp -r .next/* "$PRD_HOST:~/befitter-homepage/.next"
+    - ssh "$PRD_HOST" 'yarn start > /dev/null 2>&1 &'
   tags:
     - befit-prod-only
   only:
     - master
+  when: manual
