fix ci current folder

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ deploy_production:
     - ssh "$PRD_USER@$PRD_HOST" './killall-next-process.sh || true'
     - ssh "$PRD_USER@$PRD_HOST" 'rm -rf ~/befitter-homepage || true'
     - ssh "$PRD_USER@$PRD_HOST" 'mkdir -p ~/befitter-homepage/ || true'
-    - scp -r . "$PRD_USER@$PRD_HOST:~/befitter-homepage/"
+    - scp -r ./* "$PRD_USER@$PRD_HOST:~/befitter-homepage/"
     #- scp -r package.json "$PRD_USER@$PRD_HOST:~/befitter-homepage/"
     #- scp -r node_modules "$PRD_USER@$PRD_HOST:~/befitter-homepage/"
     - ssh "$PRD_USER@$PRD_HOST" 'yarn install; yarn build; yarn start > /dev/null 2>&1 &'
