--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,17 +5,11 @@ deploy_production:
   stage: deploy
   image: node:4.2.2
   script:
-    # - yarn remove eslint && yarn add --dev eslint@"<8.0.0"
-    - yarn install
-    - yarn build
     - ssh "$PRD_USER@$PRD_HOST" './killall-next-process.sh || true'
     - ssh "$PRD_USER@$PRD_HOST" 'rm -rf ~/befitter-homepage || true'
     - ssh "$PRD_USER@$PRD_HOST" 'mkdir -p ~/befitter-homepage/ || true'
-    - scp -r .next "$PRD_USER@$PRD_HOST:~/befitter-homepage/"
-    - scp package.json "$PRD_USER@$PRD_HOST:~/befitter-homepage/"
-    - scp -r node_modules "$PRD_USER@$PRD_HOST:~/befitter-homepage/"
-    - scp -r public "$PRD_USER@$PRD_HOST:~/befitter-homepage/"
-    - ssh "$PRD_USER@$PRD_HOST" 'cd befitter-homepage; yarn start > /dev/null 2>&1 &'
+    - scp -r ./* "$PRD_USER@$PRD_HOST:~/befitter-homepage/"
+    - ssh "$PRD_USER@$PRD_HOST" 'cd befitter-homepage; yarn install; yarn build; yarn start > /dev/null 2>&1 &'
   tags:
     - release
   only:
@@ -38,3 +32,4 @@ deploy_production_old:
     - befit-prod-only
   only:
     - master
+  when: manual
