change to pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,8 @@ deploy_production:
     - ssh "$PRD_USER@$PRD_HOST" 'rm -rf ~/befitter-homepage || true'
     - ssh "$PRD_USER@$PRD_HOST" 'mkdir -p ~/befitter-homepage/ || true'
     - scp -r ./* "$PRD_USER@$PRD_HOST:~/befitter-homepage/"
-    - ssh "$PRD_USER@$PRD_HOST" 'cd befitter-homepage; yarn install; yarn build'
-    - ssh "$PRD_USER@$PRD_HOST" 'cd befitter-homepage; yarn start > /dev/null 2>&1 &'
+    - ssh "$PRD_USER@$PRD_HOST" 'cd befitter-homepage | yarn install | yarn build'
+    - ssh "$PRD_USER@$PRD_HOST" 'cd befitter-homepage | yarn start > /dev/null 2>&1 &'
   tags:
     - release
   only:
