--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,12 +5,12 @@ deploy_production:
   stage: deploy
   image: node:4.2.2
   script:
-    - ssh "$PRD_USER@$PRD_HOST" './killall-next-process.sh || true'
+    - ssh "$PRD_USER@$PRD_HOST" './killall-homepage-process.sh || true'
     - ssh "$PRD_USER@$PRD_HOST" 'rm -rf ~/befitter-homepage || true'
     - ssh "$PRD_USER@$PRD_HOST" 'mkdir -p ~/befitter-homepage/ || true'
     - scp -r ./* "$PRD_USER@$PRD_HOST:~/befitter-homepage/"
     - ssh "$PRD_USER@$PRD_HOST" "cd befitter-homepage; yarn install; yarn build"
-    - ssh "$PRD_USER@$PRD_HOST" "cd befitter-homepage; yarn start > /dev/null 2>&1 &"
+    - ssh "$PRD_USER@$PRD_HOST" "cd befitter-homepage; yarn start -p 3000 > /dev/null 2>&1 &"
   tags:
     - release
   only:
