--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,32 +5,14 @@ deploy_production:
   stage: deploy
   image: node:4.2.2
   script:
-    - ssh "$PRD_USER@$PRD_HOST" './killall-homepage-process.sh || true'
-    - ssh "$PRD_USER@$PRD_HOST" 'rm -rf ~/befitter-homepage || true'
-    - ssh "$PRD_USER@$PRD_HOST" 'mkdir -p ~/befitter-homepage/ || true'
-    - scp -r ./* "$PRD_USER@$PRD_HOST:~/befitter-homepage/"
-    - ssh "$PRD_USER@$PRD_HOST" "cd befitter-homepage; yarn install; yarn build"
-    - ssh "$PRD_USER@$PRD_HOST" "cd befitter-homepage; yarn start -p 3000 > /dev/null 2>&1 &"
+    - ssh "$PRD_USER@$PRD_HOST" './killall-hub-process.sh || true'
+    - ssh "$PRD_USER@$PRD_HOST" 'rm -rf ~/hub-befitter || true'
+    - ssh "$PRD_USER@$PRD_HOST" 'mkdir -p ~/hub-befitter/ || true'
+    - scp -r ./* "$PRD_USER@$PRD_HOST:~/hub-befitter/"
+    - ssh "$PRD_USER@$PRD_HOST" "cd hub-befitter; yarn install; yarn build"
+    - ssh "$PRD_USER@$PRD_HOST" "cd hub-befitter; yarn start -p 3001 > /dev/null 2>&1 &"
   tags:
     - release
-  only:
-    - master
-  when: manual
-
-
-deploy_production_old:
-  stage: deploy
-  image: node:4.2.2
-  script:
-    # - yarn remove eslint && yarn add --dev eslint@"<8.0.0"
-    - yarn install
-    - yarn build
-    - kill -9 $(ps -ef | grep -i 'next start' | grep -v grep | awk '{print $2}') || true
-    - kill -9 $(ps -ef | grep -i 'yarn start' | grep -v grep | awk '{print $2}') || true
-    - yarn start > /dev/null 2>&1 &
-    - 'curl -X POST "https://api.cloudflare.com/client/v4/zones/a2df40bc458243b60608a5ebbb5f36f2/purge_cache" -H "Authorization: Bearer $CF_CACHE_TOKEN"  -H "Content-Type:application/json" --data "{\"purge_everything\":true}"'
-  tags:
-    - befit-prod-only
   only:
     - master
   when: manual
